Cover page: title alignment, fix release_dropdown/search_site_bar

--- a/site/assets/scss/_variables_project.scss
+++ b/site/assets/scss/_variables_project.scss
@@ -64,3 +64,7 @@ input[type="search"]::placeholder {
 .showcase img {
     margin: 0 30px;
 }
+
+.td-search__icon {
+    color: #9B9595 !important;
+}
